# LuckyPay

./: .gitignore  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 43c535b68ee4_making_cpf_and_email_unique.py  47fff897f778_creating_initial_tables.py
api/: __main__.py  app.py
api/configuration/: security.py  settings.py
api/database/: connection.py
api/database/repository/: participant.py  prize.py  raffle.py  tickets.py
api/models/: participant.py  prize.py  raffle.py  ticket.py
api/routes/: participant.py  prize.py  raffle.py  root.py  ticket.py
